@@ -3,6 +3,9 @@
 
 - Implemented issue #14429: Support for Solr 1.3.
 - Implemented issue #14594: provide body of error pages.
+- Added the reConnect() method to the Solr handler, so that you can re-connect
+  to it in case the connection causes issues. Related to issue #14636: Can not
+  use solr handler in long running scripts.
 
 
 1.0.3 - Monday 09 February 2009
